# ghutil

./: .pre-commit-config.yaml  .travis.yml  MANIFEST.in  README.rst  TODO.md  editrepo.py  fork.py  ghrelease.py  ghutil.py  gists.py  mkgist.py  mkpyrepo.sh  mkrepo.py  plus1.py  repos.py  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yml
docs/: commands.rst  conf.py  index.rst  requirements.txt
docs/api/: api.rst  edit.rst  git.rst  index.rst  regex.rst  showing.rst  types.rst  util.rst
gh/: __init__.py  api.py  edit.py  local.py
gh/commands/: edit.py  fork.py  list.py  release.py
ghutil/: __init__.py  __main__.py  api.py  config.py  edit.py  gists.py  git.py  issues.py  local.py  regex.py  repos.py  showing.py  types.py  util.py
ghutil/api/: client.py  endpoint.py  util.py
ghutil/cli/: __main__.py  plus1.py  release.py  remote.py  request.py
ghutil/cli/gist/: __init__.py  clone.py  delete.py  list.py  new.py  show.py  star.py  starred.py  unstar.py  web.py
ghutil/cli/issue/: __init__.py  assign.py  close.py  comments.py  created.py  edit.py  label.py  list.py  lock.py  new.py  open.py  read.py  reply.py  search.py  show.py  unlock.py  web.py
ghutil/cli/label/: __init__.py  delete.py  edit.py  list.py  new.py
ghutil/cli/milestone/: __init__.py  delete.py  list.py  new.py  open.py  web.py
ghutil/cli/pr/: __init__.py  assign.py  list.py  lock.py  merge.py  new.py  read.py  reply.py  show.py
ghutil/cli/release/: __init__.py  attach.py  delete.py  edit.py  list.py  new.py  show.py  unattach.py
ghutil/cli/repo/: __init__.py  clone.py  delete.py  edit.py  fans.py  fork.py  list.py  list_forks.py  network.py  new.py  search.py  set_topics.py  show.py  star.py  starred.py  unstar.py
ghutil/commands/: edit.py  fork.py  gist.py  gists.py  list.py  new.py  plus1.py  release.py  remote.py
ghutil/types/: __init__.py  asset.py  comment.py  gist.py  issue.py  milestone.py  release.py  repo.py  util.py
scripts/: mkpyrepo.sh
src/ghutil/: __init__.py  config.py  edit.py  git.py  regex.py  showing.py  util.py
src/ghutil/api/: __init__.py  client.py  endpoint.py  util.py
src/ghutil/cli/: __main__.py  plus1.py  request.py
src/ghutil/cli/gist/: __init__.py  clone.py  delete.py  list.py  new.py  show.py  star.py  starred.py  unstar.py  web.py
src/ghutil/cli/issue/: __init__.py  assign.py  close.py  comments.py  created.py  edit.py  label.py  list.py  lock.py  new.py  open.py  read.py  reply.py  search.py  show.py  unlock.py  web.py
src/ghutil/cli/label/: __init__.py  delete.py  edit.py  list.py  new.py
src/ghutil/cli/milestone/: __init__.py  close.py  delete.py  edit.py  list.py  new.py  open.py  show.py  web.py
src/ghutil/cli/pr/: __init__.py  close.py  comments.py  edit.py  label.py  list.py  merge.py  new.py  open.py  show.py  unlock.py  (+1 more)
src/ghutil/types/: __init__.py  asset.py  comment.py  gist.py  issue.py  milestone.py  release.py  repo.py  util.py
test/: conftest.py  test_aliases.py  test_api_client.py  test_api_config.py  test_cli_gist.py  test_cli_issue.py  test_cli_label.py  test_cli_milestone.py  test_cli_pr.py  test_cli_release.py  test_cli_repo.py  test_cli_request.py  test_edit_as_mail.py  test_mime_type.py  test_parse_gist.py  test_parse_issue.py  test_parse_pr_args.py  test_parse_release.py  test_parse_repo.py  test_regexes.py  test_search_query.py  test_show_fields.py
test/data/cassettes/: stub_parse_pr_args.json  test_cli_gist.test_gist.json  test_cli_gist.test_gist_list.json  test_cli_gist.test_gist_new_duped_names.json  test_cli_gist.test_gist_new_forced_dupe.json  test_cli_gist.test_gist_new_named.json  test_cli_gist.test_gist_new_named_stdin.json  test_cli_gist.test_gist_new_named_unnamed.json  test_cli_gist.test_gist_new_stdin.json  test_cli_gist.test_gist_new_two_unnamed.json  test_cli_gist.test_gist_new_unduped_names.json  test_cli_gist.test_gist_new_unnamed.json  test_cli_gist.test_gist_new_unnamed_named.json  test_cli_gist.test_gist_show_fork.json  test_cli_gist.test_gist_show_forked.json  test_cli_gist.test_gist_starred.json  test_cli_gist.test_gist_web_fork.json  test_cli_issue.test_issue_assign.json  test_cli_issue.test_issue_assign_delete.json  test_cli_issue.test_issue_assign_set.json  test_cli_issue.test_issue_close.json  test_cli_issue.test_issue_comments_issue.json  test_cli_issue.test_issue_edit_body.json  test_cli_issue.test_issue_edit_body_devnull.json  test_cli_issue.test_issue_edit_change_everything.json  test_cli_issue.test_issue_edit_closed.json  test_cli_issue.test_issue_edit_int_milestone.json  test_cli_issue.test_issue_edit_milestone.json  test_cli_issue.test_issue_edit_nil_assignee.json  test_cli_issue.test_issue_edit_nil_label.json  test_cli_issue.test_issue_edit_nil_milestone.json  test_cli_issue.test_issue_edit_nil_title.json  test_cli_issue.test_issue_edit_nochange.json  test_cli_issue.test_issue_edit_nosave.json  test_cli_issue.test_issue_edit_one_assignee.json  test_cli_issue.test_issue_edit_one_label.json  test_cli_issue.test_issue_edit_open.json  test_cli_issue.test_issue_edit_open_close.json  test_cli_issue.test_issue_edit_title.json  test_cli_issue.test_issue_edit_two_labels.json  (+106 more)
test/data/files/: label.json  lorem  lorem.txt
(+27 files in other folders)
