[aliases]
make=sdist bdist_wheel

[metadata]
name = ghutil
version = attr:ghutil.__version__
description = Interact with GitHub from the command line
long_description = file:README.rst
author = John Thorvald Wodder II
author_email = ghutil@varonathe.org
license = MIT
license_file = LICENSE
url = https://github.com/jwodder/ghutil

keywords =
    git
    github
    github api
    github client
    issues
    repositories

classifiers =
    Development Status :: 3 - Alpha
    #Development Status :: 4 - Beta
    #Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: MIT License
    Environment :: Console
    Intended Audience :: Developers
    Topic :: Software Development
    Topic :: Software Development :: Bug Tracking
    Topic :: Software Development :: Version Control

[options]
packages = find:
python_requires = ~=3.4
install_requires =
    asciitree        ~= 0.3.0
    click            ~= 7.0
    headerparser     ~= 0.1.0
    property-manager ~= 2.2
    python-dateutil  ~= 2.6
    requests         >= 2.4.2, <3
    uritemplate      ~= 3.0

[options.entry_points]
console_scripts =
    gh = ghutil.cli.__main__:cli
