[metadata]
name = ghutil
version = attr:ghutil.__version__
description = Interact with GitHub from the command line
long_description = file:README.rst
long_description_content_type = text/x-rst
author = John Thorvald Wodder II
author_email = ghutil@varonathe.org
license = MIT
license_files = LICENSE
url = https://github.com/jwodder/ghutil

keywords =
    git
    github
    github api
    github client
    issues
    repositories

classifiers =
    Development Status :: 3 - Alpha
    #Development Status :: 4 - Beta
    #Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: MIT License
    Environment :: Console
    Intended Audience :: Developers
    Topic :: Software Development
    Topic :: Software Development :: Bug Tracking
    Topic :: Software Development :: Version Control

project_urls =
    Source Code = https://github.com/jwodder/ghutil
    Bug Tracker = https://github.com/jwodder/ghutil/issues

[options]
packages = find:
package_dir =
    =src
python_requires = ~=3.7
install_requires =
    asciitree        ~= 0.3.0
    # <https://github.com/pallets/click/issues/2090>
    click            >= 7.0, != 8.0.2
    headerparser     ~= 0.4.0
    property-manager ~= 3.0
    python-dateutil  ~= 2.6
    requests         ~= 2.20
    uritemplate      ~= 3.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    ghutil = ghutil.cli.__main__:cli
